<resources>
    <string name="app_name">Work Book</string>
    <string name="action_settings">Settings</string>
    <string name="crime_title_hint">Enter event title.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_approved_label">Approved</string>
    <string name="date_picker_title">Date of meeting:</string>
    <string name="time_picker_title">Time of meeting:</string>
    <string name="new_event">New Event</string>
    <string name="new_user">New User</string>
    <string name="delete_crime">Delete Event</string>
    <string name="show_subtitle">Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <plurals name="subtitle_plural">
        <item quantity="one">%1$s event</item>
        <item quantity="other">%1$s events</item>
    </plurals>
    <string name="choose_user_contact">Add Participant...</string>
    <string name="event_details_hint">Event description will sent in message</string>
    <string name="view_list_text">Show participants</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report">%1$s! The Crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is approved</string>
    <string name="crime_report_unsolved">The case is not approved</string>
    <string name="crime_report_no_suspect">There is no suspect.</string>
    <string name="crime_report_suspect">The suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send event report via</string>
    <string name="send_notify">Notify all</string>
    <string name="error_contact_manager">Failed to find contact manager</string>

    <string name="login_lbl">Login</string>
    <string name="register_lbl">Register</string>

    <string name="default_sender_id">719656065325</string>
    <string name="google_app_id">719656065325</string>
</resources>
